Fixed checkboxes on smaller displays
Fixed checkboxes on smaller displays

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,9 @@
 
 .checkboxes {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 90vw;
   flex-direction: row;
 }
 
